...
                        }
                        .padding(.trailing)
                    }
#endif
                    MultiPlatformTextEditor(
                        title: titleBinder,
                        placeholder: "Edit goal",
                        macOSAccessibility: "EditGoalTextField",
                        iOSAccessibility: "EditGoalTextField"
                    )
                    .frame(minHeight: 200)
                    HStack {
                        Text("Days Estimate")
                            .foregroundColor(.gray)
...
                            ),
                            label: "Reminder 2"
                        )
                    }
                    MultiPlatformActionButton(
                        title: "Save",
                        accessibilityId: "Edit Close Button",
                        action: {
                            let notificationCenter = UNUserNotificationCenter.current()
                            notificationCenter.requestAuthorization(options: [.alert, .sound]) { accepted, _ in
                                guard accepted else { return }
                                if let goalId = goal.id {
                                    let id1 = "\(goalId.uuidString)-reminder1"
...
                .padding(.horizontal)
#if os(iOS) || os(tvOS)
                .navigationBarTitle("Edit goal", displayMode: .inline)
                .navigationBarItems(trailing: Button("Done") {
                    // I can make an editView ui test and tap the done button.
                    dismiss()
                }.accessibilityIdentifier("DoneButton"))
#endif
                .onAppear {
                    guard let goalId = goal.id else { return }
                    let reminder1Id = "\(goalId.uuidString)-reminder1"
                    let reminder2Id = "\(goalId.uuidString)-reminder2"

...
